--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <div class="wrapper"></div>
-    <script type="module" src="./index.js"></script>
+    <script src="./dist/bundle.js"></script>
   </body>
 </html>
